<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodRescue</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you">ARE YOU A:</string>
    <string name="volunteer">Volunteer</string>
    <string name="restaurant">Restaurant</string>
    <string name="charity">Charity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="volunteer_caps">VOLUNTEER</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby">See Nearby Pickups</string>
    <string name="future">Schedule Future Pickup</string>
    <string name="check_in_pickup">Check In @ Pickup</string>
    <string name="check_in_dropoff">Check In @ Dropoff</string>
    <string name="selected_location">Selected Pickup Location</string>
    <string name="address">Address</string>
    <string name="pickup_info">Pickup information:</string>

</resources>
