<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/bg_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.25"
        android:background="@drawable/launcher" />

    <TextView
        android:id="@+id/volunteer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/account_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/volunteer_caps"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/account" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/search_nearby_pickups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/volunteer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/nearby" />

    <Button
        android:id="@+id/schedule_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_nearby_pickups"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/future" />

    <Button
        android:id="@+id/check_in_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/schedule_pickup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/check_in_pickup" />

    <Button
        android:id="@+id/check_in_dropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_in_pickup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/check_in_dropoff" />

</RelativeLayout>