<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/login_relative_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/are_you_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/are_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/are_you" />

            <RadioGroup
                android:id="@+id/are_you_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/are_you"
                android:layout_margin="10dp" >

                <RadioButton
                    android:id="@+id/button_volunteer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volunteer" />

                <RadioButton
                    android:id="@+id/button_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant" />

                <RadioButton
                    android:id="@+id/button_charity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charity" />
            </RadioGroup>
        </RelativeLayout>

        <ImageView
            android:id="@+id/logo_signup"
            android:layout_width="167dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@drawable/launcher"
            android:contentDescription="@string/hello_world" />

        <RelativeLayout
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/are_you_block" >

            <TextView
                android:id="@+id/first_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/first_name_text"
                android:hint="@string/first_name" />

            <TextView
                android:id="@+id/last_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_text"
                android:layout_margin="10dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_edit"
                android:layout_toRightOf="@+id/last_name_text"
                android:hint="@string/last_name" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_text"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/email_text"
                android:layout_toRightOf="@+id/email_text"
                android:hint="@string/email" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_text"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/username_text"
                android:layout_toRightOf="@+id/username_text"
                android:hint="@string/username" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_text"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/password_text"
                android:layout_toRightOf="@+id/password_text"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_text"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/phone_text"
                android:layout_toRightOf="@+id/phone_text"
                android:hint="@string/phone" />
        </RelativeLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questions"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up" />
    </RelativeLayout>

</ScrollView>